<resources>
    <string name="app_name">且约</string>

    <string name="login_success">login success</string>
    <string name="login">登录</string>
    <string name="Username">用户名</string>
    <string name="Password">密码</string>
    <string name="forgot_your_password">忘记密码 ?</string>
    <string name="go">GO</string>
    <string name="repeat_password">重复密码</string>
    <string name="next">下一步</string>
    <string name="register">注册</string>
    <string name="network_break">网络中断</string>
    <string name="network_connect_error">连接错误</string>

    <string name="title">标题:</string>
    <string name="place">地点:</string>
    <string name="content">内容:</string>
    <string name="theme">主题:</string>
    <string name="finish">发表</string>
    <string name="search">搜索</string>
    <!--multi image selector-->
    <string name="folder_all">所有照片</string>
    <string name="preview">预览</string>
    <string name="msg_no_camera">没有系统相机</string>
    <string name="msg_amount_limit">已经达到最高选择数量</string>
    <string name="action_done">完成</string>
    <string name="photo_unit">张</string>
    <string name="tip_take_photo">拍摄照片</string>
    <string name="un_login">还没有登录</string>


    <string name="version">V1.0.0</string>
    <string name="clean_cache">清理缓存</string>
    <string name="share_application">分享应用</string>
    <string name="comment">意见反馈</string>
    <string name="edit">编辑</string>

    <string name="portrait">头像</string>
    <string name="nikeName">昵称</string>
    <string name="signature">签名</string>
    <string name="sex">性别</string>

    <string name="save">完成</string>
    <string name="cancel">取消</string>
    <string name="add_news_edit_hint">和大家一起哔哔叨叨吧</string>
    <string name="activity_add_news_title">发布一个新的约</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="client_id_title">clientId</string>
    <string name="client_id_desc">每一个终端称为一个 client。\n Client 拥有一个在应用内唯一标识自己的 id。\n 这个 id 由应用自己定义</string>
    <string name="conversation_desc">开始聊天之前，需要先创建或者加入一个对话，然后再邀请其他人进来，之后所有参与者在这个对话内进行交流。</string>
    <string name="welcome">您好 </string>
    <string name="create_conversation">创建一个和机器人的对话</string>
    <string name="join_conversation">加入一个已有对话</string>
    <string name="online_site">http://leancloud.github.io/js-realtime-sdk/demo/demo2/</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="logout">注销</string>
    <string name="begin_chat">开始聊天</string>
    <string name="otherId_input_hint">请输入对方的 clientId</string>


    <string name="square_name">广场</string>
    <string name="square_member_title">在线成员列表</string>
    <string name="login_null_name_tip">请输入用户名</string>

    <string name="unspport_message_type">暂不支持此消息类型</string>
    <string name="message_is_null">消息不能为空</string>

    <string name="edit_info_avatar">头像修改</string>
    <string name="edit_info_introduce">简介</string>


</resources>
