<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <include layout="@layout/toolbar"/>
    <android.support.v7.widget.CardView
        app:cardCornerRadius="10dp"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="300dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <TextView
                    android:text="@string/portrait"
                    style="@style/UserText"/>
                <ImageView
                    android:layout_marginLeft="290dp"
                    android:adjustViewBounds="true"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"/>
                <ImageView
                    style="@style/UserImage"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <TextView
                    android:text="@string/nikeName"
                    style="@style/UserText"/>
                <EditText
                    android:maxEms="5"
                    android:layout_marginLeft="240dp"
                    style="@style/UserText"/>
                <ImageView
                    style="@style/UserImage"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <TextView
                    android:text="@string/sex"
                    style="@style/UserText"/>
                <TextView
                    android:text="男"
                    android:textSize="18sp"
                    android:layout_marginTop="13dp"
                    android:layout_marginLeft="320dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageView
                    style="@style/UserImage"/>
            </RelativeLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/signature"
                    style="@style/UserText"/>
                <TextView
                    android:text="人民网北京8月23日电 经过卓有成效的陆基训练，日前，又一批舰载机飞行员驾驶国产歼—15舰载战斗机在辽宁舰上成功进行阻栏着舰和滑跃起飞，通过航母飞行资质认证，实现了我国舰载战斗机飞行员由军地协作向海军"
                    android:layout_width="280dp"
                    android:layout_height="100dp"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                android:layout_marginLeft="310dp"
                android:layout_marginTop="20dp"
                android:text="0"
                android:textColor="@color/primary_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="/100"
                android:layout_marginTop="20dp"
                android:textColor="@color/primary_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>