<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.acemurder.datingme.modules.edit.EditActivity">

    <LinearLayout
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/toolbar"/>
    <EditText
        android:id="@+id/edit_et_theme"
        android:hint="@string/theme"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <EditText
        android:id="@+id/edit_et_title"
        android:hint="@string/title"
        android:textColorHint="@color/primary_Light"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <EditText
        android:id="@+id/edit_et_content"
        android:hint="@string/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/edit_iv_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>


    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/edit_menu_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="5dp"
        fab:menu_fab_size="mini"
        fab:menu_labels_showAnimation="@anim/jump_from_down"
        fab:menu_labels_hideAnimation="@anim/jump_to_down"
        fab:menu_animationDelayPerItem="0"
        fab:menu_shadowColor="#444"
        fab:menu_colorNormal="#00C853"
        fab:menu_colorPressed="#00E676"
        fab:menu_colorRipple="#69F0AE">
        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/edit_fab_take_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_a_photo_white_18px"
            fab:fab_label="拍照"
            app:fab_colorNormal="#00BFA5"
            app:fab_colorPressed="#1DE9B6"
            app:fab_colorRipple="#99FFFFFF"
            app:fab_size="mini"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/edit_fab_add_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_photo_filter_white_18px"
            app:fab_colorNormal="#00B8D4"
            app:fab_colorPressed="#00E5FF"
            app:fab_colorRipple="#99FFFFFF"
            fab:fab_label="从相册中选择"
            app:fab_size="mini"/>
    </com.github.clans.fab.FloatingActionMenu>
</RelativeLayout>
