<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/crop__button_bar"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/crop__button_bar"
        android:orientation="vertical"
        tools:context=".ui.activity.social.PostNewsActivity">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.PopupOverlay"
            app:elevation="0dp">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/toolbar_save"
                        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="12dp"
                        android:text="@string/save"
                        android:textSize="16sp" />


                    <TextView
                        android:id="@+id/toolbar_cancel"
                        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/cancel"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/toolbar_title"
                        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_add_news_title"
                        android:textSize="18sp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"/>
                </RelativeLayout>
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">
            <EditText
                android:id="@+id/add_news_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="12dp"
                android:textColor="@color/primary_text"
                android:gravity="top"
                android:hint="得写一个主题哦"
                android:minLines="1" />
            <EditText
                android:id="@+id/add_news_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="15dp"
                android:background="@null"
                android:gravity="top"
                android:textColor="@color/primary_text"
                android:hint="告诉我们时间,地点吧"
                android:minLines="5" />

            <com.acemurder.datingme.component.ninelayout.NineGridlayout
                android:id="@+id/iv_ngrid_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
               />


        </LinearLayout>

    </LinearLayout>
</ScrollView>