<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background_grey"
              android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/toolbar_save"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="12dp"
                    android:text="@string/save"
                    android:textSize="16sp"/>


                <TextView
                    android:id="@+id/toolbar_cancel"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/cancel"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/toolbar_title"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:text="修改信息"
                    android:textSize="18sp"/>
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/edit_info_avatar_layout"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_layout"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/edit_info_avatar"
            android:textColor="@color/primary_text"
            android:textSize="15sp"/>
        <com.acemurder.datingme.component.widget.CircleImageView
            android:id="@+id/edit_info_avatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:scaleType="fitCenter"
            android:src="@drawable/moiling"/>


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/divider_edit_info"/>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@android:color/white">

        <EditText
            android:id="@+id/edit_introduce_et"
            android:layout_width="match_parent"
            android:layout_height="153dp"
            android:background="@null"
            android:gravity="top"
            android:hint="向大家秀出自己吧"
            android:paddingLeft="15dp"
            android:paddingTop="14dp"
            android:textCursorDrawable="@null"

            android:textColor="@color/text_dark"
            android:textColorHint="@color/text_light_2"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/edit_introduce_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="15dp"
            android:textColor="@color/text_light_2"
            android:textSize="13sp"/>

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/divider"/>

</LinearLayout>